--- a/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
+++ b/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
@@ -32,33 +32,34 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="259474205">
+			<object class="IBUIView" id="874455974">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="513487427">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIImageView" id="232127665">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{8, 9}, {249, 150}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="18317347"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIButton" id="623015127">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIButton" id="922409277">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{90, 38}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="976981585"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="190482288">
+						<string key="IBUINormalTitle">ON</string>
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="983133524">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -66,47 +67,48 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="636556291">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="1012692337">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1037122780">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="898828178">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="498833885">
+						<object class="NSFont" key="IBUIFont" id="664609801">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="1015511896">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIButton" id="380595042">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{90, 92}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="718750127"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<reference key="IBUIHighlightedTitleColor" ref="190482288"/>
+						<string key="IBUINormalTitle">ON</string>
+						<reference key="IBUIHighlightedTitleColor" ref="983133524"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="636556291"/>
-						<reference key="IBUIFontDescription" ref="1037122780"/>
-						<reference key="IBUIFont" ref="498833885"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1012692337"/>
+						<reference key="IBUIFontDescription" ref="898828178"/>
+						<reference key="IBUIFont" ref="664609801"/>
 					</object>
-					<object class="IBUIImageView" id="281800143">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIImageView" id="500171779">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{25, 35}, {40, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="922409277"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -115,12 +117,12 @@
 							<string key="NSResourceName">music_on@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="235818081">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIImageView" id="115004752">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{25, 89}, {40, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="380595042"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -129,77 +131,78 @@
 							<string key="NSResourceName">audio_on@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIButton" id="739528411">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIButton" id="718750127">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{161, 92}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<reference key="IBUIHighlightedTitleColor" ref="190482288"/>
+						<string key="IBUINormalTitle">OFF</string>
+						<reference key="IBUIHighlightedTitleColor" ref="983133524"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="636556291"/>
-						<reference key="IBUIFontDescription" ref="1037122780"/>
-						<reference key="IBUIFont" ref="498833885"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1012692337"/>
+						<reference key="IBUIFontDescription" ref="898828178"/>
+						<reference key="IBUIFont" ref="664609801"/>
 					</object>
-					<object class="IBUIButton" id="996286175">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIButton" id="976981585">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{160, 38}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="115004752"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<reference key="IBUIHighlightedTitleColor" ref="190482288"/>
+						<string key="IBUINormalTitle">OFF</string>
+						<reference key="IBUIHighlightedTitleColor" ref="983133524"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="636556291"/>
-						<reference key="IBUIFontDescription" ref="1037122780"/>
-						<reference key="IBUIFont" ref="498833885"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1012692337"/>
+						<reference key="IBUIFontDescription" ref="898828178"/>
+						<reference key="IBUIFont" ref="664609801"/>
 					</object>
-					<object class="IBUIButton" id="246989065">
-						<reference key="NSNextResponder" ref="259474205"/>
+					<object class="IBUIButton" id="18317347">
+						<reference key="NSNextResponder" ref="874455974"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 0}, {27, 27}}</string>
-						<reference key="NSSuperview" ref="259474205"/>
-						<reference key="NSWindow"/>
+						<reference key="NSSuperview" ref="874455974"/>
+						<reference key="NSNextKeyView" ref="500171779"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">X</string>
-						<reference key="IBUIHighlightedTitleColor" ref="190482288"/>
+						<reference key="IBUIHighlightedTitleColor" ref="983133524"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="636556291"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1012692337"/>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">dice_close_btn@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="1037122780"/>
-						<reference key="IBUIFont" ref="498833885"/>
+						<reference key="IBUIFontDescription" ref="898828178"/>
+						<reference key="IBUIFont" ref="664609801"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{265, 167}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="232127665"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -212,7 +215,93 @@
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords"/>
+			<array class="NSMutableArray" key="connectionRecords">
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">bgImageView</string>
+						<reference key="source" ref="874455974"/>
+						<reference key="destination" ref="232127665"/>
+					</object>
+					<int key="connectionID">16</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">musicOnButton</string>
+						<reference key="source" ref="874455974"/>
+						<reference key="destination" ref="922409277"/>
+					</object>
+					<int key="connectionID">17</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">musicOffButton</string>
+						<reference key="source" ref="874455974"/>
+						<reference key="destination" ref="976981585"/>
+					</object>
+					<int key="connectionID">18</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">audioOnButton</string>
+						<reference key="source" ref="874455974"/>
+						<reference key="destination" ref="380595042"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">audioOffButton</string>
+						<reference key="source" ref="874455974"/>
+						<reference key="destination" ref="718750127"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickAudioOffButton:</string>
+						<reference key="source" ref="718750127"/>
+						<reference key="destination" ref="874455974"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">24</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickMusicOffButton:</string>
+						<reference key="source" ref="976981585"/>
+						<reference key="destination" ref="874455974"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">22</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickMusicOnButton:</string>
+						<reference key="source" ref="922409277"/>
+						<reference key="destination" ref="874455974"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickAudioOnButton:</string>
+						<reference key="source" ref="380595042"/>
+						<reference key="destination" ref="874455974"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickCloseButton:</string>
+						<reference key="source" ref="18317347"/>
+						<reference key="destination" ref="874455974"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">25</int>
+				</object>
+			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -234,58 +323,58 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="259474205"/>
+						<reference key="object" ref="874455974"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="513487427"/>
-							<reference ref="281800143"/>
-							<reference ref="235818081"/>
-							<reference ref="996286175"/>
-							<reference ref="739528411"/>
-							<reference ref="1015511896"/>
-							<reference ref="623015127"/>
-							<reference ref="246989065"/>
+							<reference ref="232127665"/>
+							<reference ref="500171779"/>
+							<reference ref="115004752"/>
+							<reference ref="976981585"/>
+							<reference ref="718750127"/>
+							<reference ref="380595042"/>
+							<reference ref="922409277"/>
+							<reference ref="18317347"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="513487427"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="232127665"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="281800143"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="500171779"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="235818081"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="115004752"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="739528411"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="718750127"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="996286175"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="976981585"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="623015127"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="922409277"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="1015511896"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="380595042"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="246989065"/>
-						<reference key="parent" ref="259474205"/>
+						<reference key="object" ref="18317347"/>
+						<reference key="parent" ref="874455974"/>
 					</object>
 				</array>
 			</object>
@@ -297,6 +386,7 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="3.CustomClassName">DiceSettingView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -307,7 +397,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">15</int>
+			<int key="maxID">25</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
